--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,21 @@ app.config(function($routeProvider, $locationProvider) {
 				}
 				getMeows();
 
+$scope.submitnewMeow = function(){
+				$http.post('/meows',{newMeow : $scope.newMeow}).then(function(){
+                      getMeows();
+					  $scope.newMeow ='';
+				});
+};
+
+$scope.removeMeow = function(meow){
+$http.put('/meows/remove',{ meow: meow}).then(function(){
+	getMeows();
+});
+};
 		});
 
+		
 app.controller('SignupController', function($scope,$http){
 	
 	console.log('You are on the Signup Page');
